src/test/deca/context/invalid/instanceof-rightOperandNull.deca
class A{}
{
    A a;
    a instanceof null;
}
